# Alink

./: .gitignore  A.I's council  README.en-US.md  README.md  SECURITY.md  pom.xml
alink_dl_predictors/: pom.xml
alink_dl_predictors/predictor-tf/: pom.xml
connectors/: pom.xml
connectors/connector-datahub/: pom.xml
connectors/connector-hbase/: pom.xml
connectors/connector-hive/: pom.xml
connectors/connector-iceberg/: pom.xml
connectors/connector-jdbc/: pom.xml
connectors/connector-kafka/: pom.xml
connectors/connector-kafka-0.10/: pom.xml
connectors/connector-kafka-0.11/: pom.xml
connectors/connector-kafka-base/: pom.xml
connectors/connector-odps/: pom.xml
connectors/connector-parquet-0.11/: pom.xml
connectors/connector-pravega/: pom.xml
connectors/connector-redis/: pom.xml
connectors/filesystem/: pom.xml
core/: pom.xml
dl_predictors/: pom.xml
dl_predictors/predictor-onnx/: pom.xml
dl_predictors/predictor-tf/: pom.xml
dl_predictors/predictor-torch/: pom.xml
docs/: index-cn.md  index-en.md
docs/cn/: SUMMARY.md  aftsurvivalregression.md  (+425 more)
examples/: pom.xml
plugins/: pom.xml
pyalink/: adult.ipynb  ftrl_demo.ipynb  kmeans.ipynb  mnist.ipynb  review_naive_bayes.ipynb
python/: pom.xml
shaded_libraries/: build_on_apple_m1.sh  pom.xml
shaded_libraries/third_party_flink_ai_extended/flink-ml-framework/python/: CMakeLists.txt  setup.py
shaded_libraries/third_party_flink_ai_extended/flink-ml-framework/python/flink_ml_framework/: context.py  java_file.py  startup.py
shaded_libraries/third_party_flink_ai_extended/flink-ml-framework/python/flink_ml_framework/include/: java_file.h  rw_test.h  spscqueue.h
shaded_libraries/third_party_flink_ai_extended/flink-ml-framework/python/flink_ml_framework/ops/: java_file_python_binding.cc
shaded_libraries/third_party_flink_ai_extended/flink-ml-tensorflow/python/: CMakeLists.txt  setup.py
shaded_libraries/third_party_flink_ai_extended/flink-ml-tensorflow/python/cmake/modules/: FindTensorFlow.cmake
shaded_libraries/third_party_flink_ai_extended/flink-ml-tensorflow/python/example/: tensorflow_on_flink_table.py
shaded_libraries/third_party_flink_ai_extended/flink-ml-tensorflow/python/flink_ml_tensorflow/: gpu_info.py  tensorflow_TFConfig.py  tensorflow_context.py  tensorflow_on_flink_mlconf.py  tensorflow_on_flink_ops.py  tensorflow_on_flink_table.py  tensorflow_on_flink_tfconf.py
shaded_libraries/third_party_flink_ai_extended/flink-ml-tensorflow/python/flink_ml_tensorflow/ops/: flink_writer_ops.cc  queue_file_system.h
test_utils/: pom.xml
tutorial/: README.md  alink_java.md
webui/: README.md
(+9888 files in other folders)
